--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -35,14 +35,14 @@ spring:
 
 ---
 
-spring:
-  config:
-    activate:
-      on-profile: testdb
-#  datasource:
-#    url: jdbc:h2:mem:board;mode-mysql
-#    driverCLassName: org.h2.Driver
-#  sql:
-#    init:
-#      mode: always
-#  test.database.replace: none
+#spring:
+#  config:
+#    activate:
+#      on-profile: testdb
+##  datasource:
+##    url: jdbc:h2:mem:board;mode-mysql
+##    driverCLassName: org.h2.Driver
+##  sql:
+##    init:
+##      mode: always
+##  test.database.replace: none
