--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -18,6 +18,10 @@ spring:
     username: dk
     password: mfni6243
     driver-class-name: com.mysql.cj.jdbc.Driver
+
+#    url: jdbc:h2:mem:testdb
+#    username: sa
+#    driver-class-name: org.h2.Driver
   jpa:
     defer-datasource-initialization: true
     hibernate:
